if(UNIT_TESTS)
	set(src_files objective_function_test.cpp constraint_functions_test.cpp)
	add_executable(runTestsOptimizationFunctions runTests.cpp ${src_files})
	find_package(Armadillo REQUIRED)
	include_directories(${ARMADILLO_INCLUDE_DIRS})
	target_link_libraries(runTestsOptimizationFunctions gtest_main)
	target_link_libraries(runTestsOptimizationFunctions ${ARMADILLO_LIBRARIES})
	target_link_libraries(runTestsOptimizationFunctions   objectiveFunctions)
	target_link_libraries(runTestsOptimizationFunctions   optimizers)
	target_link_libraries(runTestsOptimizationFunctions   auxiliary)
	target_link_libraries(runTestsOptimizationFunctions   surrogateModels)
	target_link_libraries(runTestsOptimizationFunctions   output)
	target_link_libraries(runTestsOptimizationFunctions   testFunctions)
	target_link_libraries(runTestsOptimizationFunctions   lhs)
	
	find_package(OpenMP)
	if(OpenMP_CXX_FOUND)	
		target_link_libraries(runTestsOptimizationFunctions OpenMP::OpenMP_CXX)
	endif()

endif(UNIT_TESTS)
