if(UNIT_TESTS)

	set(src_files objective_function_test.cpp constraint_functions_test.cpp)
	add_executable(runTestsObjectiveFunctions runTests.cpp ${src_files})
	find_package(Armadillo REQUIRED)
	include_directories(${ARMADILLO_INCLUDE_DIRS})
	target_link_libraries(runTestsObjectiveFunctions gtest_main)
	target_link_libraries(runTestsObjectiveFunctions ${ARMADILLO_LIBRARIES})
	target_link_libraries(runTestsObjectiveFunctions   objectiveFunctions)
	target_link_libraries(runTestsObjectiveFunctions   optimizers)
	target_link_libraries(runTestsObjectiveFunctions   auxiliary)
	target_link_libraries(runTestsObjectiveFunctions   surrogateModels)
	target_link_libraries(runTestsObjectiveFunctions   output)
	target_link_libraries(runTestsObjectiveFunctions   testFunctions)
	
	find_package(OpenMP)
	if(OpenMP_CXX_FOUND)	
		target_link_libraries(runTestsObjectiveFunctions OpenMP::OpenMP_CXX)
	endif()

endif(UNIT_TESTS)
