if(UNIT_TESTS)
	set(src_files output_test.cpp)
	add_executable(runTestsOutput runTests.cpp ${src_files})
	find_package(Armadillo REQUIRED)
	include_directories(${ARMADILLO_INCLUDE_DIRS})
	target_link_libraries(runTestsOutput gtest_main)
	target_link_libraries(runTestsOutput ${ARMADILLO_LIBRARIES})
#	target_link_libraries(runTestsAuxiliary   linearAlgebra)
	target_link_libraries(runTestsOutput   output)
	target_link_libraries(runTestsOutput   optimizers)
	target_link_libraries(runTestsOutput   auxiliary)

endif(UNIT_TESTS)
