if(UNIT_TESTS)
	set(src_files random_functions_test.cpp)
	add_executable(runTestsRandom runTests.cpp ${src_files})
	find_package(Armadillo REQUIRED)
	include_directories(${ARMADILLO_INCLUDE_DIRS})
	target_link_libraries(runTestsRandom gtest_main)
	target_link_libraries(runTestsRandom ${ARMADILLO_LIBRARIES})
#	target_link_libraries(runTestsAuxiliary   linearAlgebra)
	target_link_libraries(runTestsRandom   output)
	target_link_libraries(runTestsRandom   optimizers)
	target_link_libraries(runTestsRandom   auxiliary)

endif(UNIT_TESTS)
